<resources>
    <string name="app_name">AlertaPet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Labels-->
    <string name="labelVermifugado">O Animal foi vermifugado?</string>
    <string name="labelCastrado">O Animal foi castrado?</string>
    <string name="labelGenero">Qual o genero do Animal?</string>
    <string name="labelEspecie">Qual a espécie do Animal?</string>
    <string name="labelAdicionais">Informações adicionais</string>
    <string name="spinnerEspecieLabel">Espécie</string>
    <string name="radio_f">Fêmea</string>
    <string name="radio_m">Macho</string>
    <string name="radio_sim">Sim</string>
    <string name="radio_nao">Não</string>
    <string name="entrar">entrar</string>
    <string name="login_button_label">Logar</string>
    <string name="senha_placeholder">Senha</string>
    <string name="email_placeholder">Email</string>
    <string name="dialog_login_title">Login</string>
    <string name="register_button_label">Criar uma conta nova?</string>
    <string name="login_msg_sucesso">Logado com sucesso</string>
    <string name="campos_vazio_login">Preencha todos os campos</string>
    <string name="checkbox_register_text">Eu li e aceito os termos de uso</string>
    <string name="confirmar_senha_placeholder">Confirme sua senha</string>
    <string name="dialog_register_title">Registrar</string>
    <string name="voltar_button_label">Voltar</string>
    <string name="registrar_button_label">Registrar</string>
    <string name="registro_sucesso_msg">registrado com sucesso</string>

    <!--Descrição de conteudo-->
    <string name="contentImageDescription">upload da imagem do animal</string>


    <!--opcoes do spinner especies-->
    <string name="especie1">Cachorros</string>
    <string name="especie2">Gatos</string>
    <string name="especie3">Passaros</string>
    <string name="especie4">Peixes</string>
    <string name="especie5">Roedores</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnCadastrarLabel">Cadastrar</string>
    <string name="btnConfirmar_label">Confirmar</string>
    <string name="btnEditar_label">Editar</string>
    <string name="nameLabel">Nome:</string>
    <string name="dtNascimentoLabel">Data de Nascimento:</string>
    <string name="celularLabel">Celular</string>
    <string name="especieLabel">Espécie</string>
    <string name="generoLabel">Genero</string>
    <string name="vermifugadoLabel">Vermifugado</string>
    <string name="castradoLabel">Castrado</string>
    <string name="ImageViewDescription">imagem do animal</string>
    <string name="NameNotFound">Nome não encontrado</string>
    <string name="OnDevelopment">Em Construção</string>

    <!--nav Labels-->
    <string name="PerfilLabel">Perfil</string>
    <string name="AdocaoLabel">Adoção</string>
    <string name="ListaLabel">Lista de Animais</string>
    <string name="RegistrarLabel">Registrar Animais</string>
    <string name="BatePapoLabel">Bate Papo</string>
    <string name="ConfigLabel">Configurações</string>
    <string name="DeslogarLabel">Deslogar</string>
</resources>
