<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/PerfilLabel" />
        <item
            android:id="@+id/nav_adocao"
            android:icon="@drawable/ic_action_adocao"
            android:title="@string/AdocaoLabel" />
        <item
            android:id="@+id/nav_lista_animais"
            android:icon="@drawable/ic_list"
            android:title="@string/ListaLabel" />
        <item
            android:id="@+id/nav_registrar_animais"
            android:icon="@drawable/ic_action_add"
            android:title="@string/RegistrarLabel" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/BatePapoLabel" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_action_gear"
            android:title="@string/ConfigLabel" />
        <item
            android:id="@+id/nav_logoff"
            android:icon="@drawable/ic_power_settings_new"
            android:title="@string/DeslogarLabel" />
    </group>


</menu>
