<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aniharu.alertapet.RegistrarAnimaisFragment">


    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:id="@+id/fragAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Put form controls here-->
            <ImageView

                android:id="@+id/imageview_default_picture"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/contentImageDescription"
                android:cropToPadding="false"
                android:padding="32dp"
                android:src="@drawable/ic_up_image" />

            <TextView
                android:id="@+id/labelVermifugado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:text="@string/labelVermifugado"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radiogroup_vermifugado"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp">

                <RadioButton
                    android:id="@+id/radiobutton_vermifugado_sim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_sim"/>

                <RadioButton
                    android:id="@+id/radiobutton_vermifugado_nao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_nao"/>


            </RadioGroup>

            <TextView
                android:id="@+id/labelCastrado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:text="@string/labelCastrado"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radiogroup_castrado"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp">

                <RadioButton
                    android:id="@+id/radiobutton_castrado_sim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_sim"/>

                <RadioButton
                    android:id="@+id/radiobutton_castrado_nao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_nao"/>

            </RadioGroup>

            <TextView
                android:id="@+id/labelGenero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:text="@string/labelGenero"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radiogroup_genero"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp">

                <RadioButton
                    android:id="@+id/radiobutton_genero_fem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_f"/>

                <RadioButton
                    android:id="@+id/radiobutton_genero_masc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_m"/>

            </RadioGroup>

            <TextView
                android:id="@+id/labelEspecie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:text="@string/labelEspecie"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/SpinnerEspecie"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:entries="@array/especies"
                android:prompt="@string/spinnerEspecieLabel">
            </Spinner>

            <TextView
                android:id="@+id/labelAdicionais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:text="@string/labelAdicionais"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/infoAdicionais"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border"
                android:inputType="textMultiLine"
                android:lines="5">
            </EditText>

            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:text="@string/btnCadastrarLabel"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>